# freenetconfd-plugins

./: .gitignore  CMakeLists.txt  Makefile  README.md  black-book.c  house-lockdown.c  sandwich.c  shopping-list.c
debian/: changelog  control
examples/: CMakeLists.txt  black-book.c  choice.c  filer.c  hello.c  house-lockdown.c  sandwich.c  shopping-list.c  vehicle.c
examples/yang/: .gitignore  black-book@2014-11-28.yang  choice@2015-02-10.yang  filer@2014-11-28.yang  hello@2015-06-08.yang  house-lockdown@2014-11-28.yang  sandwich@2014-11-28.yang  shopping-list@2014-11-28.yang  vehicle@2015-01-02.yang
openwrt/: CMakeLists.txt  ietf-system.c
openwrt/yang/: ietf-system-deviations@2015-02-11.yang  ietf-system-openwrt@2015-03-18.yang
sysrepo/: CMakeLists.txt  ifstat.c
sysrepo/yang/: ifstat@2015-03-11.yang
yang/: black-book@2014-11-28.yang  house-lockdown@2014-11-28.yang
