CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(freenetconfd-plugins)

ADD_DEFINITIONS(-Os -Wall --std=gnu11 -Wmissing-declarations -D_GNU_SOURCE)
INCLUDE_DIRECTORIES(include)

OPTION(EXAMPLE_PLUGINS "build example plugins" OFF)
OPTION(OPENWRT_PLUGINS "build OpenWrt plugins" OFF)
OPTION(SYSREPO_PLUGINS "build sysrepo plugins" ON)

FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build)

SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib/freenetconfd)

IF (EXAMPLE_PLUGINS)
  ADD_SUBDIRECTORY(examples)
ENDIF ()

IF (OPENWRT_PLUGINS)
  ADD_SUBDIRECTORY(openwrt)
ENDIF ()

IF (SYSREPO_PLUGINS)
  ADD_SUBDIRECTORY(sysrepo)
ENDIF ()
